WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26956
Background audio stops playing when JS GC runs
https://bugs.webkit.org/show_bug.cgi?id=26956
Summary
Background audio stops playing when JS GC runs
Simon Fraser (smfr)
Reported
2009-07-03 13:30:34 PDT
If a page creates an Audio element in JS, and tells it to play, then that only works the first time the page is loaded. On Reload, the audio fails to play.
Attachments
Patch
(1.58 KB, patch)
2009-07-03 13:52 PDT
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-07-03 13:31:01 PDT
<
rdar://problem/6870187
>
Simon Fraser (smfr)
Comment 2
2009-07-03 13:52:04 PDT
Created
attachment 32247
[details]
Patch
Simon Fraser (smfr)
Comment 3
2009-07-03 13:54:58 PDT
http://trac.webkit.org/changeset/45537
Alexey Proskuryakov
Comment 4
2009-07-08 07:15:50 PDT
It seems that handling such cases with ActiveDOMObject machinery could be more performant than running a long list of checks on each node with a wrapper.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug