2009-07-03  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Sam Weinig.

        Background audio stops playing when JS GC runs
        https://bugs.webkit.org/show_bug.cgi?id=26956

        Ensure we keep the Audio object around while it is playing, so that it
        doesn't get collected.

        Not testable because there's no way to know whether the audio keeps
        playing without holding a reference to it.

        * bindings/js/JSDOMBinding.cpp:
        (WebCore::isObservableThroughDOM):

Canonical link: https://commits.webkit.org/37198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45537 268f45cc-cd09-0410-ab3c-d52691b4dbfc